# dsnp-bot

./: .flake8  .gitignore  README.md  pyproject.toml
dsnp-bot/: __main__.py  config.py.example  disney.py
dsnpbot/: __init__.py  __main__.py  disney.py
